Made it possible to store a recipe. There is no check for uniqueness atm. So storing the same recipe name twice breaks the server.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
   ## JPA
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+#    show-sql: false
   ## MySQL
   datasource:
     url: jdbc:mysql://localhost:9876/cookbook
