Enabled searching for recipes by name. Enabled OpenApi definitions which can be requested and tested via UI at runtime. This will enable generating client code for use in the Angular front-end application

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
-        <springfox-swagger.version>3.0.0</springfox-swagger.version>
+        <springdoc-openapi-ui.version>1.6.4</springdoc-openapi-ui.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
     </properties>
 
@@ -32,16 +32,9 @@
 
         <!-- interface documentation dependencies -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox-swagger.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox-swagger.version}</version>
-            <scope>compile</scope>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
 
         <!-- database dependencies -->
