Added file upload. This uploads the recipe image file and stores it on the file system. By using the recipe id as the filename, the file is guaranteed to be unique, and a check can later be created to remove files no longer linked to a recipe.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- Runtime dependencies -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <!-- compile dependencies -->
         <dependency>
             <groupId>org.projectlombok</groupId>
