added extra interface methods to enable searching for all recipes using an ingredient added an inUse parameter to the IngredientModel since ngredients can only be edited when not in use

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,11 +47,11 @@ spring:
   ## Flyway
   flyway:
     url: jdbc:mysql://localhost:9876/cookbook
-    username: cookbook
+    user: cookbook
     password: ${db.password}
   config:
     activate:
-      on-profile: default
+      on-profile: local
 
 logging:
   level:
