--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,12 +67,12 @@ spring:
         show-sql: true
   ## MySQL
   datasource:
-    url: jdbc:mysql://192.168.1.195:3306/cookbook
+    url: jdbc:mysql://localhost:3306/cookbook
     username: cookbook
     password: ${db.password}
   ## Flyway
   flyway:
-    url: jdbc:mysql://192.168.1.195:3306/cookbook
+    url: jdbc:mysql://localhost:3306/cookbook
     user: cookbook
     password: ${db.password}
   config:
